// PEERS_GENERATION_CONFIG:
//   targets: [backend]
//   model_only: true

syntax = "proto3";

package peers_touch.v1.peers_touch_station.ai_box;

option go_package = "github.com/peers-touch/peers-touch/station/app/subserver/ai-box/proto_gen/v1/peers_touch_station/ai_box";

import "google/protobuf/timestamp.proto";
import "v1/peers_touch_station/ai_box/provider.proto";

// AI Box服务接口
service AiBoxService {
  // 提供商管理
  rpc CreateProvider(CreateProviderRequest) returns (CreateProviderResponse);
  rpc UpdateProvider(UpdateProviderRequest) returns (UpdateProviderResponse);
  rpc DeleteProvider(DeleteProviderRequest) returns (DeleteProviderResponse);
  rpc GetProvider(GetProviderRequest) returns (GetProviderResponse);
  rpc ListProviders(ListProvidersRequest) returns (ListProvidersResponse);
  rpc TestProvider(TestProviderRequest) returns (TestProviderResponse);
}